Make fixed-position asides work again
This does mean that, due to the text entry field, we can end up with the browser giving you a horizontal scrollbar for half a second or so.

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -147,7 +147,6 @@ html {
   max-width: $max-line-width;
   margin: 0 auto;
   padding: $line-edge-padding;
-  overflow: hidden;
 }
 
 // A line-separated listing,
